--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.9.0",
     "redux-persist": "^6.0.0",
     "swiper": "^10.2.0"
   },
